# journal_feed

./: .travis.yml  README.md  pyproject.toml
journal_feed/src/: __init__.py  pyppeteers.py  sites.py
tests/: test_journal_feed.py
